--- a/content/project/index.html
+++ b/content/project/index.html
@@ -1,10 +1,8 @@
 ---
-slug: projects
+slug: project
 title: project
 ---
 
 <script src="{{< blogdown/postref >}}index_files/header-attrs/header-attrs.js"></script>
 
 
-<p>nothing to see here… move along!</p>
-<pre class="r"><code>a &lt;- 5</code></pre>
